# internal/db/sqlcgen/models.go
@@ -1,12 +1,14 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.31.1
+//   sqlc v1.30.0
 
 package sqlcgen
 
 import (
 	"encoding/json"
 	"time"
+
+	"github.com/jackc/pgx/v5/pgtype"
 )
 
 type DropStat struct {
@@ -122,6 +124,72 @@ type Reservation struct {
 	ProgramDurationMs int64
 	CreatedAt         time.Time
 	UpdatedAt         time.Time
+}
+
+type ReservationRuleMatch struct {
+	ReservationID int64
+	RuleID        int64
+}
+
+type Rule struct {
+	ID               int64
+	Name             string
+	Description      string
+	Enabled          bool
+	Priority         int32
+	IsFree           pgtype.Bool
+	DurationMinMs    *int64
+	DurationMaxMs    *int64
+	PeriodStartAt    *time.Time
+	PeriodEndAt      *time.Time
+	DedupeEnabled    bool
+	DedupeThreshold  pgtype.Float4
+	DedupeWindow     pgtype.Interval
+	KeepOriginal     string
+	EncodeProfiles   []string
+	FilenameTemplate string
+	Metadata         json.RawMessage
+	CreatedAt        time.Time
+	UpdatedAt        time.Time
+}
+
+type RuleChannelType struct {
+	RuleID      int64
+	ChannelType string
+}
+
+type RuleGenre struct {
+	RuleID   int64
+	GenreLv1 int16
+}
+
+type RuleService struct {
+	RuleID    int64
+	NetworkID int32
+	ServiceID int32
+}
+
+type RuleSite struct {
+	RuleID int64
+	Site   string
+}
+
+type RuleTextMatch struct {
+	RuleID        int64
+	Seq           int32
+	Target        string
+	Mode          string
+	Value         string
+	CaseSensitive bool
+	Negate        bool
+}
+
+type RuleTime struct {
+	RuleID   int64
+	Seq      int32
+	Weekdays int32
+	StartSec int32
+	EndSec   int32
 }
 
 type ScheduleSync struct {
